fixed navbar image overflowing links

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a:hover {
     white-space: nowrap;
     margin: auto;
     padding: 5px;
-    overflow: auto;
+    overflow: hidden;
     background-color: #00b;
     max-width: 90vw;
     height: 45px;
@@ -84,22 +84,23 @@ a:hover {
     white-space: nowrap;
     margin: auto;
     padding: 0;
-    overflow: none;
+    overflow: auto;
     background-color: #00b;
     max-width: 90vw;
     max-height: 45px;
-    justify-content: left;
     border-radius: 4px;
 }
 
 .nav-item {
     display: inline-block;
     height: 45px;
+    padding-top: 0px;
 }
 
-.navbar-brand {
-    display: inline;
-    height: 45px;
+.nav-img {
+    display: block;
+    float: left;
+    padding-right: 5px;
 }
 
 .navbar-link {
@@ -122,8 +123,7 @@ a:hover {
 }
 
 .container-fluid {
-    display: flex;
-    flex-wrap: inherit;
+    display: inline-block;
     align-items: center;
     justify-content: space-between;
 }
